test/libsolidity/errorRecoveryTests/recovery_failed_eos.sol
pragma solidity >=0.0.0;

contract Error7 {
    constructor() {
        a =
// ----
// ParserError 6933: (76-76): Expected primary expression.
// ParserError 1957: (76-76): In Statement, ';'is expected; got end of source instead.
// ParserError 1957: (76-76): In Block, '}'is expected; got end of source instead.
// ParserError 1957: (76-76): In ContractDefinition, '}'is expected; got end of source instead.
